mudancas usuario + estoque
