# src/controller/operador.py
@@ -11,27 +11,27 @@ config = get_config()
 
 @handler_exception
 @token_required(tipos=['empresa'], validate_empresa=True)
-def search(empresa_id: str):
-    logging.info('Listando Funcionarios')
-    response = find(empresa_id=empresa_id)
+def search(empresa_id: int, nome: str = None):
+    logging.info('Listando Operadores')
+    response = find(empresa_id=empresa_id, nome=nome)
     return create_response(response=response, status=200)
 
 
 @handler_exception
 @token_required(tipos=['empresa'], validate_empresa=True)
-def get(empresa_id: str, operador_id: int):
-    logging.info('Getting Funcionario')
+def get(empresa_id: int, operador_id: int):
+    logging.info('Getting Operador')
     response = get_item(empresa_id=empresa_id, operador_id=operador_id)
     if response:
         return create_response(response=response, status=200)
     else:
-        raise ApiError(error_code=404, error_message='Funcionario não encontrado')
+        raise ApiError(error_code=404, error_message='Operador não encontrado')
 
 
 @handler_exception
 @token_required(tipos=['empresa'], validate_empresa=True, validate_situacao=True)
-def post(empresa_id: str, body: dict):
-    logging.info('Criando Funcionario')
+def post(empresa_id: int, body: dict):
+    logging.info('Criando Operador')
     validate_request(body=body, created=True)
     body['empresaId'] = empresa_id
     response = create(body=body)
@@ -40,24 +40,24 @@ def post(empresa_id: str, body: dict):
 
 @handler_exception
 @token_required(tipos=['empresa'], validate_empresa=True)
-def put(empresa_id: str, funcionario_id: int, body: dict):
-    logging.info('Atualizando Funcionario')
+def put(empresa_id: int, operador_id: int, body: dict):
+    logging.info('Atualizando Operador')
     validate_request(body=body, created=False)
     body['empresaId'] = empresa_id
-    body['id'] = funcionario_id
+    body['id'] = operador_id
     response = update(body=body)
     return create_response(response=response, status=200)
 
 
 @handler_exception
 @token_required(tipos=['empresa'], validate_empresa=True)
-def delete(empresa_id: str, usuario_id: int):
-    logging.info('Deletando Funcionario')
-    response = remove(empresa_id=empresa_id, usuario_id=usuario_id)
+def delete(empresa_id: int, operador_id: int):
+    logging.info('Deletando Operador')
+    response = remove(empresa_id=empresa_id, operador_id=operador_id)
     if response:
         return create_response(response={}, status=200)
     else:
-        raise ApiError(error_code=404, error_message='Funcionario não encontrado')
+        raise ApiError(error_code=404, error_message='Operador não encontrado')
 
 
 def options(empresa_id: str):
@@ -68,7 +68,7 @@ def options(empresa_id: str):
     return response
 
 
-def options_id(empresa_id: str, funcionario_id: int):
+def options_id(empresa_id: str, operador_id: int):
     response = make_response('{}', 200)
     response.headers['Access-Control-Allow-Origin'] = config.origin
     response.headers['Access-Control-Allow-Methods'] = 'PUT, GET, DELETE, POST, OPTIONS'
@@ -85,5 +85,5 @@ def validate_request(body: dict, created: bool):
             ApiError(error_code=400, error_message='Senha invalida.')
     if not body.get('nomeUsuario') or len(body['nomeUsuario']) > 50:
         ApiError(error_code=400, error_message='NomeUsuario invalido.')
-    if not body.get('acesso') or body['acesso'] not in ['total', 'modificar', 'leitura']:
-        ApiError(error_code=400, error_message='Acesso invalido.')
+    if not body.get('tipoAcesso') or body['tipoAcesso'] not in ['total', 'modificar', 'leitura']:
+        ApiError(error_code=400, error_message='TipoAcesso invalido.')
